--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,37 @@
-.jumbotron {
-    text-align: center;
-    width: 90%;
-    margin: 50px auto;
+body {
+    margin: 50px 0;
+}
+
+.row-1-xs {
+    height: 50px;
+    margin-top: 40px !important;
+}
+
+.row-3 {
+    margin-top: 50px;
+}
+
+.black {
+    background-color: black;
+    margin: 25px 0;
+}
+
+.sm {
+    height: 100px;
+}
+
+.xs {
+    height: 50px;
+}
+
+.md {
+    height: 200px;
+}
+
+.lg {
+    height: 200px;
+}
+
+.xl {
+    height: 400px;
 }
